Removed bugs related to handling of URL/URIs with special characters for the import of schemas. This also included a modification of the SchemaServiceInterface.
git-svn-id: http://svn.esdi-humboldt.eu/repo/humboldt2/trunk@1727 5d385326-3dfc-11dd-8f4f-eb0017f4c70c